Revision history for Sys-Syslog

        [BUGFIX] CPAN-RT#90538: facility from openlog() is not used (Anton Yuzhaninov).
        [PORT] CPAN-RT#90212: Support non-Windows platforms where syslog.h
        is not defined (Brian Fraser).
        [PORT] CPAN-RT#90218: getproto*() and getserv*() functions are not
        available everywhere (Brian Fraser).

0.33 -- 2013.05.24 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#82531: Invalid usage of POSIX::_exit (Alexander Berger).
        [OPTIM] No longer inherit from Exporter.
        [OPTIM] Load Fcntl only when necessary.
        [DOC] Add links to other logging modules.
        [DOC] CPAN-RT#80398: Typo spotted by alfirth@gmail.com
        [DOC] Typo spotted by David Steinbrunner.
        [TEST] CPAN-RT#79683: Added delays in t/facilities-routing.t

0.32 -- 2012.09.14 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#69040: Don't modify @_ in syslog().
        [BUGFIX] Restore compatibility with Perl 5.6.0.
        [DOC] Perl-RT#81858: Fix some spelling errors (Peter J. Acklam).

0.31 -- 2012.08.18 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Level 'emerg' could not be used since v0.29.
        [BUGFIX] Setting a message facility with syslog() was broken since v0.29
        (Noel Butler).
        [BUGFIX] CPAN-RT#69992: Make setlogsock() only use the requested mechanism,
        restoring way it worked in v0.27 and before (Niko Tyni).
        [BUGFIX] CPAN-RT#69986: setlogsock() doesn't return undef on failure
        (Niko Tyni).
        [BUGFIX] CPAN-RT#69997: Use the default UDP socket timeout on GNU/kFreeBSD
        as well, and lower it to a more sensible value (Niko Tyni).
        [BUGFIX] CPAN-RT#75827: syslog() logging everything regardless of log
        mask when using using numeric LOG_* macros (Bryan Thale).
        [TESTS] Added t/facilities-routing.t
        [DOC] Don't highlight "the Rules of Sys::Syslog" from the Description.